--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -1,6 +1,10 @@
-cursor_trail 1
+# cursor_trail 1
 
-font_family      BlexMono Nerd font
-bold_font        auto
-italic_font      auto
-bold_italic_font auto
+font_family      CaskaydiaCove Nerd Font Mono
+bold_font        CaskaydiaCove Nerd Font Mono Bold
+italic_font      CaskaydiaCove Nerd Font Mono Italic
+bold_italic_font CaskaydiaCove Nerd Font Mono Bold Italic
+#
+# bold_font        auto
+# italic_font      auto
+# bold_italic_font auto
