--- a/starship/.config/starship.toml
+++ b/starship/.config/starship.toml
@@ -18,7 +18,7 @@ style_root = "red bold"
 format = "[$user]($style)"
 
 [hostname]
-ssh_only = true
+ssh_only = false
 style = "blue bold"
 format = "[$hostname]($style)"
 
