--- a/starship/.config/starship.toml
+++ b/starship/.config/starship.toml
@@ -24,8 +24,8 @@ format = "[$hostname]($style)"
 
 [directory]
 style = "blue bold"
-truncate_to_repo = true
-truncation_length = 3
+truncate_to_repo = false
+truncation_length = 0
 
 [git_branch]
 symbol = " "
