--- a/yazi/.config/yazi/keymap.toml
+++ b/yazi/.config/yazi/keymap.toml
@@ -2,3 +2,8 @@
 on   = "<Esc>"
 run  = "close"
 desc = "Cancel input"
+
+[[mgr.prepend_keymap]]
+on   = ["P"]
+run  = "toggle preview"
+desc = "Toggle preview pane"
