--- a/yazi/.config/yazi/package.toml
+++ b/yazi/.config/yazi/package.toml
@@ -1,5 +1,12 @@
-[plugin]
-deps = []
+[[plugin.deps]]
+use = "yazi-rs/plugins:vcs-files"
+rev = "7ca66b4"
+hash = "4ee57085277d616acfa0ef1fef37dc00"
+
+[[plugin.deps]]
+use = "yazi-rs/plugins:git"
+rev = "03cdd4b"
+hash = "eb301feb9e125adf5aa4f59f2aa54e44"
 
 [[flavor.deps]]
 use = "gosxrgxx/flexoki-dark"
